--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@astrojs/check": "^0.5.6",
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/montserrat": "^5.0.18",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
     "astro": "^4.4.12",
