--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.6",
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inter": "^5.0.17",
     "@fontsource-variable/montserrat": "^5.0.18",
     "@fontsource/mukta-mahee": "^5.0.19",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
