--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/inter": "^5.0.17",
     "@fontsource-variable/montserrat": "^5.0.18",
     "@fontsource/mukta-mahee": "^5.0.19",
+    "@nanostores/react": "^0.7.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-navigation-menu": "^1.1.4",
